Added a WHY for main objective

--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -103,7 +103,7 @@ The stochasticity of the project also comes with various challenges. Naively one
 %TODO: For the cites, look at sources and where they got it from; citing directly leads me to more (varied) sources
 
 \subsection{This research project}
-The primary goal of this project is to look at the entire life-cycle of OWFs, and how decisions near the start of this life-cycle impact the situation down the line. Specifically I aim to use both optimisation and simulation to provide insight into logistical decisions, primarily scheduling, but also layout of the site and the routing on it. The latter two are very challenging subjects on their own, and I will likely only run simplistic experiments with them, seeing whether looking at a full life-cycle gives any insights on its own. The layout of the site has very clear effect on any operation performed on the site. The scheduling of an installation project installation project might affect the optimal maintenance policy, especially considering that maintenance might start after the first wind turbine is completed, while the rest of the site is still being build. These are the type of connections I aim to explore within this project. 
+The primary goal of this project is to look at the entire life-cycle of OWFs, and how decisions near the start of this life-cycle impact the situation down the line. Specifically I aim to use both optimisation and simulation to provide insight into logistical decisions, primarily scheduling, but potentially also layout of the site and the routing on it. The latter two are very challenging subjects on their own, and I will likely only run simplistic experiments with them, to see whether looking at a full life-cycle gives any insights on its own. %The layout of the site has very clear effect on any operation performed on the site. The scheduling of an installation project installation project might affect the optimal maintenance policy, especially considering that maintenance might start after the first wind turbine is completed, while the rest of the site is still being build. These are the type of connections I aim to explore within this project. 
 
 Over the past year, I have spend most of my time reading up on the subject, both the methods and the challenges off offshore projects. This literature in summed up in \Cref{s:lit}. Additionally I have been laying the groundwork for a simulator which I am planning to turn into a tool for support on the logistical decisions described previously. Details on this tool are given in \Cref{s:sim}.
 
@@ -114,6 +114,8 @@ The explicit research objective is:
 \begin{objective}
 Create an integrated optimisation and simulation model spanning the entire life-cycle of an Offshore Wind Farm, based on models for each phase of the life-cycle.
 \end{objective}
+
+The primary motivation for this objective is that in the literature the three phases of the life-cycle are each treated seperately, while they might heavily influence each other. There is a large amount of research done on the maintenance projects, and quite a bit on installation projects as well, while decommission projects are less well researched. Treating these phases as separate is often beneficial, but some insight about how they influence each other is also valuable. The clearest decision that impacts all future decisions is the layout of the site. Therefore the tool will be able to take in different layouts and thereby experiment with them. However, the main focus of this project is on scheduling, where the different phases also affect each other. A clear way to demonstrate this is by showing that the phases are not entirely distinct; an installation projects can take several years to complete, but the first WTGs might be operational much earlier. That means the site is partly operational while other parts are still being installed. These operational parts might need maintenance before the installation is fully complete, and at the very least these early WTGs may need maintenance before the last WTG that was installed needs maintenance. Therefore the installation schedule impacts the maintenance schedule, and to my knowledge there is no other research exploring this effect. A similar effect appears at the end of the life-cycle, when the decommission project starts. Here the connection between maintenance and decommission may be even stronger, as it may not be cost-effective to conduct maintenance on a WTG shortly before that WTG is decommissioned. Conversely one may want to schedule the decommission of a WTG that recently has had maintenance later than that of a WTG which is likely to need maintenance soon. How this exactly works out depends on the installation, maintenance and decommission policies, but it is clear that these decisions affect one another, and that is what I would like to research in this project. 
 
 This objective has three sub-objectives:
 
@@ -137,7 +139,7 @@ After each of the sub-objectives is complete, the models need to be integrated i
 
 In addition to these research objectives, I aim to achieve some practical results during this research. I want to build a tool that can be used to help make logistical decisions, based on the above models. The tool should have multiple functions, highlighting either the optimisation or the simulation aspect of the model. For example, one could focus on the optimisation and generate some optimal schedule, given a set of parameters, or give the tool a schedule it should look for improvements on. Alternatively, the tool should be able to take in a schedule and explore statistical measures if this schedule was to be used in reality, providing insight into expected and plausible completion dates and costs of projects. 
 
-This tool is a core part of the project, as it can be used to validate the models and explore their strength. It will be used to make the research contribution of this project applicable to actual projects. 
+This tool is a core part of the project, as it can be used to validate the models and explore their strength. It will be used to make the research contribution of this project applicable to actual projects. Therefore I aim to acquire some realistic data on past projects on OWFs, and use them to validate the model and tool. Once this is done, the strength of the tool can be tested by exploring some scheduling policies. 
 
 \bigskip
 
